Fixed responsiveness for cards on small screens

--- a/chicken.css
+++ b/chicken.css
@@ -506,8 +506,7 @@ body{
 
 @media only screen and (max-width: 768px) {
     body{background-image: url("images/cartoonfarm.png");}
-    .displayCards{width:40px; height: 40px; padding: 0}
-    .hiddenCards{width:40px; height: 40px; padding: 0}
+    .card{width:40px; height: 40px; padding: 0}
     .img-size{width:30px; height: 30px;}
     .game-button{font-size:10px;}
     .player-name{font-size:10px;}
@@ -520,8 +519,7 @@ body{
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
     body{background-image: url("images/cartoonfarm.png");}
-    .displayCards{width:50px; height: 50px; padding: 0}
-    .hiddenCards{width:50px; height: 50px; padding: 0}
+    .card{width:50px; height: 50px; padding: 0}
     .img-size{width:40px; height: 40px;}
     .game-button{font-size:15px;}
     .player-name{font-size:15px;}
@@ -534,8 +532,7 @@ body{
 
 @media only screen and (min-width: 993px) and (max-width: 1366px) {
     body{background-image: url("images/toystablet.jpg");}
-    .displayCards{width:70px; height: 70px; padding: 0}
-    .hiddenCards{width:70px; height: 70px; padding: 0}
+    .card{width:70px; height: 70px; padding: 0}
     .img-size{width:45px; height: 45px; margin-top: 5px;}
     .game-button{font-size:15px;}
     .player-name{font-size:20px;}
